--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                         <span class="absolute flex items-center justify-center w-6 h-6 bg-slate-800 rounded-full -left-3 ring-8 ring-slate-950">
                             <i class="fas fa-briefcase text-teal-400"></i>
                         </span>
-                        <h3 class="flex items-center mb-1 text-xl font-semibold text-slate-100">Python Programming Intern <span class="bg-teal-400/10 text-teal-300 text-sm font-medium mr-2 px-2.5 py-0.5 rounded ml-3">Latest</span></h3>
+                        <h3 class="flex items-center mb-1 text-xl font-semibold text-slate-100 ml-6">Python Programming Intern <span class="bg-teal-400/10 text-teal-300 text-sm font-medium mr-2 px-2.5 py-0.5 rounded ml-3">Latest</span></h3>
                         <time class="block mb-2 text-sm font-normal leading-none text-slate-500">Jun 2024 - Jul 2025 at Infosys Springboard</time>
                         <p class="mb-4 text-base font-normal text-slate-400">Completed structured training in Python, focusing on control flow, functions, OOP, and real-world use cases. Developed Python mini-projects applying modular coding, file handling, and debugging.</p>
                     </div>
@@ -297,7 +297,7 @@
                         <span class="absolute flex items-center justify-center w-6 h-6 bg-slate-800 rounded-full -left-3 ring-8 ring-slate-950">
                            <i class="fas fa-microchip text-teal-400"></i>
                         </span>
-                        <h3 class="text-xl font-semibold text-slate-100">Embedded Systems Intern</h3>
+                        <h3 class="text-xl font-semibold text-slate-100 ml-6">Embedded Systems Intern</h3>
                         <time class="block mb-2 text-sm font-normal leading-none text-slate-500">Apr 2024 - Jun 2024 at EduSkills Foundation</time>
                         <p class="text-base font-normal text-slate-400">Built embedded C applications for microcontroller-based projects with Arduino. Implemented real-time sensor interfacing.</p>
                     </div>
