--- a/index.html
+++ b/index.html
@@ -106,17 +106,15 @@
         
         .profile-image-container {
             position: relative;
-            width: 280px;
-            height: 280px;
+            width: 600px;
+            height: 600px;
         }
         
         .profile-image-container::before {
             content: '';
             position: absolute;
             inset: 0;
-            border-radius: 50%;
             padding: 10px; 
-            background: linear-gradient(45deg, #2dd4bf, #a78bfa); 
             -webkit-mask: 
                 linear-gradient(#fff 0 0) content-box, 
                 linear-gradient(#fff 0 0);
@@ -187,7 +185,7 @@
                      <div class="flex justify-center md:justify-end zoom-in">
                         <div class="profile-image-container">
                              <!-- IMPORTANT: Replace this placeholder with your actual image URL -->
-                            <img src="https://placehold.co/400x400/0f172a/FFF?text=GH" alt="G. Hemalatha" class="rounded-full w-full h-full object-cover">
+                            <img src="https://i.ibb.co/bjWHqnzb/IMG-20250909-WA0001-removebg-preview-2.png" alt="G. Hemalatha" class="w-full h-full object-cover rounded-full">
                         </div>
                     </div>
                 </div>
